Documentation: minor adjustments to the layout.
Former-commit-id: 11e9530d02e7a6fd3e72b12e278ba2bf79b47389

--- a/docs/theme/customdoxygen.css
+++ b/docs/theme/customdoxygen.css
@@ -18,6 +18,11 @@ h1.groupheader {
 	margin-top:18px;
 }
 
+img {
+	max-width: 800px;
+	width:100%;
+}
+
 h2.groupheader {
 	border-bottom: 0px;
 	color: #333;
